--- a/composer.json
+++ b/composer.json
@@ -1,91 +1,25 @@
 {
-  "name": "badphp/dispatch",
+  "name": "dispatch/dispatch",
   "type": "library",
   "description": "a microframework/front-controller",
   "keywords": ["framework", "router", "microframework", "micro", "microphp"],
-  "homepage": "http://github.com/badphp/dispatch",
+  "homepage": "http://noodlehaus.github.io/dispatch/",
   "license": "MIT",
-  "authors": [
-    {
-      "name": "Jesus A. Domingo",
-      "role": "Developer",
-      "homepage": "http://github.com/noodlehaus/"
-    },
-    {
-      "name": "Kafene",
-      "role": "Contributor",
-      "homepage": "https://github.com/kafene"
-    },
-    {
-      "name": "Martin Angelov",
-      "role": "Contributor",
-      "homepage": "https://github.com/martinaglv"
-    },
-    {
-      "name": "Lars",
-      "role": "Contributor",
-      "homepage": "https://github.com/larsbo"
-    },
-    {
-      "name": "4d47",
-      "role": "Contributor",
-      "homepage": "https://github.com/4d47"
-    },
-    {
-      "name": "Bastian Widmer",
-      "role": "Contributor",
-      "homepage": "https://github.com/dasrecht"
-    },
-    {
-      "name": "Lloyd Zhou",
-      "role": "Contributor",
-      "homepage": "https://github.com/lloydzhou"
-    },
-    {
-      "name": "Darkalemanbr",
-      "role": "Contributor",
-      "homepage": "https://github.com/darkalemanbr"
-    },
-    {
-      "name": "Amin By",
-      "role": "Contributor",
-      "homepage": "https://github.com/xielingwang"
-    },
-    {
-      "name": "Ross Masters",
-      "role": "Contributor",
-      "homepage": "https://github.com/rmasters"
-    },
-    {
-      "name": "Tom Streller",
-      "role": "Contributor",
-      "homepage": "https://github.com/scan"
-    },
-    {
-      "name": "Ciprian Danea",
-      "role": "Contributor",
-      "homepage": "https://github.com/cdanea"
-    },
-    {
-      "name": "Roman Ožana",
-      "role": "Contributor",
-      "homepage": "https://github.com/OzzyCzech"
-    }
-  ],
+  "authors": [{
+    "name": "Jesus A. Domingo",
+    "role": "Developer",
+    "homepage": "http://noodlehaus.github.io/"
+  }],
   "require": {
     "php": ">= 5.4.0"
   },
-  "require-dev": {
-    "ext-xdebug": ">= 2.1"
+  "suggest": {
+    "dispatch/dispatch-extras": "Encryption, caching and more, for dispatch",
+    "dispatch/dispatch-mustache": "mustache template support within dispatch"
   },
   "autoload": {
     "files": [
-      "dispatch.php"
+      "src/dispatch.php"
     ]
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "8.x-dev"
-    }
   }
 }
